Fix tab headers being too small in Chrome

--- a/css/style.scss
+++ b/css/style.scss
@@ -805,6 +805,7 @@ video {
 	display: flex;
 	margin-top: 0;
 	margin-bottom: 10px;
+	min-height: 44px;
 }
 
 .tabHeaders .tabHeader {
